fix styling gap between navbars

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -7722,7 +7722,7 @@ h2 {
 }
 #sidebar-wrapper {
   background: #e2e2e2;
-  top: 27px;
+  top: 24px;
   font-size: 16px;
 }
 #sidebar-wrapper .nav > li > a {
