--- a/app/styles/theme.less
+++ b/app/styles/theme.less
@@ -214,7 +214,7 @@ h2 {
 
 #sidebar-wrapper {
   background: #e2e2e2;
-  top: 27px;
+  top: 24px;
   font-size: 16px;
 
   .nav > li > a {
